# nasa-disasters-hub-jupytergis

./: .gitignore  fires.ipynb  pyproject.toml
