[project]
name = "disasters-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adlfs>=2024.12.0",
    "deltalake>=1.0.2",
    "fsspec>=2025.5.1",
    "geopandas>=1.1.0",
    "ipykernel>=6.29.5",
    "jupytergis>=0.5.0",
    "lonboard>=0.11.1",
    "mercantile>=1.2.1",
    "obstore>=0.6.0",
    "owslib>=0.34.1",
    "planetary-computer>=1.0.0",
    "pyarrow>=20.0.0",
    "pystac-client>=0.8.6",
    "rasterio>=1.4.3",
    "shapely>=2.1.1",
    "stackstac>=0.5.1",
]
